# Openomni

./: .gitignore  Log.py  README.md  cfg.example.json  config.py  main.py  pyproject.toml  requirements.txt
commands/: claude.py  deepseek.py  edit.py  glm.py  grok.py  image.py  qwen.py  shared.py  tts.py  websearch.py
